samples/_failures_safe/1761525168_d65ea4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ee6011b3.c: In function ‘tokenize’:
./samples/SAFE/__tmp_ee6011b3.c:150:9: error: expected declaration or statement at end of input
  150 |         }
      |         ^
./samples/SAFE/__tmp_ee6011b3.c:150:9: error: expected declaration or statement at end of input
